# corewirev1

./: .gitignore  README.md  code.html  package.json  playwright.config.ts  vjecno-povrce.html
CooreWireV1/apps/api/: Dockerfile  alembic.ini  app.py  pyproject.toml
CooreWireV1/apps/api/alembic/: env.py
CooreWireV1/apps/api/alembic/versions/: 0001_initial_corewire_schema.py
CooreWireV1/apps/api/core/: config.py  dependencies.py
CooreWireV1/apps/api/core/admin/: auth.py  content.py  overview.py  programming.py  review.py  router.py  settings.py
CooreWireV1/apps/api/core/analysis/: actors.py  doctrine.py  dossier.py  evaluation.py  extraction.py  thesis.py  types.py  writer.py
CooreWireV1/apps/api/core/analytics/: router.py
CooreWireV1/apps/api/core/articles/: router.py  schemas.py  service.py
CooreWireV1/apps/api/core/compliance/: __init__.py
CooreWireV1/apps/api/core/llm/: profiles.py  router.py
CooreWireV1/apps/api/core/newsletter/: router.py  service.py
CooreWireV1/apps/api/core/operator/: bridge.py  router.py  schemas.py  service.py
CooreWireV1/apps/api/core/policy/: budget.py
CooreWireV1/apps/api/tests/: test_admin_auth.py  test_admin_content.py  test_admin_programming.py  test_analysis_doctrine.py  test_analysis_dossier.py  test_analysis_evaluation.py  test_analysis_writer.py  test_analytics_api.py  test_article_actions.py  test_article_queries.py  test_autonomy_controls.py  test_model_profiles.py  test_newsletter_api.py  test_operator_api.py  test_operator_bridge.py  test_operator_service.py  test_publish_gate.py  test_review_queue.py
(+261 files in other folders)
