[project]
name = "corewire-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "fastapi>=0.116",
    "psycopg2-binary>=2.9",
    "pydantic>=2.11",
    "sqlalchemy>=2.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
